[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rctm-extra"
version = "0.0.1"
authors = [{ name = "Dogukan Teber", email = "dteber@woodwellclimate.org" }]
description = "A utility tool that automates RCTM-project related operation in the HPC cluster"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Unix/macOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/whrc/rctm-extra"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
rctm_extra = "rctm_extra:main.main"

[tool.ruff]
lint.select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade,
    "I",  # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 20